Fix layout issues for 1100px breakpoint

--- a/styles.css
+++ b/styles.css
@@ -715,7 +715,7 @@ footer hr.footer-social-network {
   }
 
   .social-media-container {
-    width: 146px;
+    width: 10%;
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -748,7 +748,7 @@ footer hr.footer-social-network {
   }
 
   .about-description {
-    width: 566px;
+    width: 470px;
     height: 148px;
     padding-left: 8%;
     font-size: 20px;
@@ -797,6 +797,11 @@ footer hr.footer-social-network {
     background-image: url(assets/Illustration-header-big.png);
   }
 
+  p.Description-text {
+    width: 470px;
+    align-self: stretch;
+  }
+
   .works-line {
     width: 60%;
   }
@@ -823,8 +828,9 @@ footer hr.footer-social-network {
   }
 
   .feat-img-principal-card {
-    width: 680px;
-    height: 481.033px;
+    width: 100%;
+    height: auto;
+    max-width: 684px;
     background-size: cover;
   }
 
@@ -844,6 +850,7 @@ footer hr.footer-social-network {
     font-size: 20px;
     font-weight: 400;
     line-height: 28px;
+    height: 186px;
   }
 
   .second-card {
@@ -917,12 +924,13 @@ footer hr.footer-social-network {
   }
 }
 
-/*horizontal moviles*
-@media (min-width:480px) and (max-width: 767px) {
-  
-}
+@media (min-width: 1200px) {
+  p.Description-text {
+    width: 566px;
+    align-self: center;
+  }
 
-/*average moviles*
-@media (max-width:480px) {
-  
-}*/
+  p.about-description {
+    width: 566px;
+  }
+}
